# rtweekend

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  out.ppm  raytracing  run.sh
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  sphere.h  vec3.h
src/: main.cpp
